--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -210,7 +210,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (umbkaudne)</string>
 
-    <string name="send_address_hint">Saaja XMR/BTC aadress või OpenAlias</string>
     <string name="send_paymentid_hint">Makse ID (valikuline)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Privaatsed kommentaarid (valikuline)</string>
@@ -361,4 +360,14 @@
     <string name="label_test">Testi</string><!--note: as in "Test a network connection"-->
 
     <string name="backup_success">Tagavarakoopia õnnestus</string>
+
+    <string name="send_address_resolve_bip70">Resolving Payment URI&#8230;</string>
+    <string name="send_address_not_bip70">Could not resolve Payment URI</string>
+    <string name="send_address_bip70">Resolved Payment URI &#x2714;</string>
+    <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
+    <string name="send_address_hint">Saaja</string>
+
+    <string name="xmrto_error_001">XMR.TO offline - try again later</string>
+    <string name="xmrto_error_004">BTC amount out of bounds</string>
+    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
 </resources>
