--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -210,7 +210,6 @@
 
     <string name="send_amount_btc_xmr">%1$s (schatting)</string>
 
-    <string name="send_address_hint">XMR- of BTC-adres ontvanger</string>
     <string name="send_paymentid_hint">Betalings-ID (optioneel)</string>
     <string name="send_amount_hint">0,00</string>
     <string name="send_notes_hint">Opmerkingen voor jezelf (optioneel)</string>
@@ -363,4 +362,14 @@
     <string name="label_test">Test</string><!--note: as in "Test a network connection"-->
 
     <string name="backup_success">Backup successful</string>
+
+    <string name="send_address_resolve_bip70">Resolving Payment URI&#8230;</string>
+    <string name="send_address_not_bip70">Could not resolve Payment URI</string>
+    <string name="send_address_bip70">Resolved Payment URI &#x2714;</string>
+    <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
+    <string name="send_address_hint">Ontvanger</string>
+
+    <string name="xmrto_error_001">XMR.TO offline - try again later</string>
+    <string name="xmrto_error_004">BTC amount out of bounds</string>
+    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
 </resources>
