hide sweep amount in street mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -422,4 +422,6 @@
     <string name="xmrto_error_012">Too many requests</string>
 
     <string name="xmrto_error" translatable="false">XMR.TO Service Error</string>
+
+    <string name="street_sweep_amount">EVERYTHING!</string>
 </resources>
