--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -358,22 +358,23 @@
     <string name="node_refresh_wait">Prosím počkajte, kým sa skenovanie nedokončí</string>
     <string name="node_create_hint">Vyber alebo pridaj uzly</string>
     <string name="node_pull_hint">Pridaj uzly manuálne alebo potiahni dole pre skenovanie</string>
-    <string name="node_scanning">Skenivanie siete&#8230;</string>
+    <string name="node_scanning">Prehľadávam sieť&#8230;</string>
     <string name="node_nobookmark">Automaticky ukladám %1$d najlepších uzlov</string>
     <string name="label_test">Test</string><!--note: as in "Test a network connection"-->
 
-    <string name="backup_success">Backup successful</string>
+    <string name="backup_success">úspešne zálohované</string>
 
-    <string name="send_address_resolve_bip70">Resolving Payment URI&#8230;</string>
-    <string name="send_address_not_bip70">Could not resolve Payment URI</string>
-    <string name="send_address_bip70">Resolved Payment URI &#x2714;</string>
+    <string name="send_address_resolve_bip70">Prekladám URI platby&#8230;</string>
+    <string name="send_address_not_bip70">Neviem spracovať URI platby</string>
+    <string name="send_address_bip70"> URI platby &#x2714;</string>
     <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
-    <string name="send_address_hint">Prijímatel</string>
+    <string name="send_address_hint">Príjemca</string>
 
-    <string name="xmrto_error_001">XMR.TO offline - try again later</string>
-    <string name="xmrto_error_004">BTC amount out of bounds</string>
-    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
-    <string name="xmrto_error_012">Too many requests</string>
+    <string name="xmrto_error_001">XMR.TO je offline - skús neskôr</string>
+    <string name="xmrto_error_004">Množstvo BTC je mimo rámca</string>
+    <string name="xmrto_error_010">Neplatná alebo stará URL platby</string>
+    <string name="xmrto_error_012">Príliš veľa požiadaviek</string>
 
-    <string name="street_sweep_amount">EVERYTHING!</string> <!-- as in: "everything in the account" = "all the money" -->
+    <string name="street_sweep_amount">VŠETKO!</string> <!-- as in: "everything in the account" = "all the money" -->
+
 </resources>
