Update zh-rTW translation (#529)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -363,16 +363,15 @@
     <string name="node_nobookmark">已自動加入 %1$d 個節點至書籤</string>
     <string name="label_test">測試節點</string>
 
-    <string name="send_address_resolve_bip70">Resolving Payment URI&#8230;</string>
-    <string name="send_address_not_bip70">Could not resolve Payment URI</string>
-    <string name="send_address_bip70">Resolved Payment URI &#x2714;</string>
-    <!-- please verify this means "Receiver" or "Recipient" as in "Receiver in the transaction" -->
+    <string name="send_address_resolve_bip70">解析付款 URI &#8230;</string>
+    <string name="send_address_not_bip70">無法解析付款 URI</string>
+    <string name="send_address_bip70">已解析付款 URI &#x2714;</string>
     <string name="send_address_hint">收款者</string>
 
-    <string name="xmrto_error_001">XMR.TO offline - try again later</string>
-    <string name="xmrto_error_004">BTC amount out of bounds</string>
-    <string name="xmrto_error_010">Invalid or outdated Payment URL</string>
-    <string name="xmrto_error_012">Too many requests</string>
+    <string name="xmrto_error_001">XMR.TO 無法使用 - 請稍候再試</string>
+    <string name="xmrto_error_004">BTC 金額超出限制</string>
+    <string name="xmrto_error_010">無效或過期的付款網址</string>
+    <string name="xmrto_error_012">請求過於頻繁</string>
 
-    <string name="street_sweep_amount">EVERYTHING!</string> <!-- as in: "everything in the account" = "all the money" -->
+    <string name="street_sweep_amount">全部！</string>
 </resources>
