--- a/app/src/stagenet/res/values/strings.xml
+++ b/app/src/stagenet/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Stagenet</string>
+    <string name="app_name" translatable="false">monerujo Stagenet</string>
 </resources>
